src/test/ui/const-ptr/out_of_bounds_read.stderr
error: any use of this value will cause an error
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
   |
LL |         copy_nonoverlapping(src, tmp.as_mut_ptr(), 1);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |         |
   |         memory access failed: pointer must be in-bounds at offset 8, but is outside bounds of alloc6 which has size 4
   |         inside `std::ptr::read::<u32>` at $SRC_DIR/core/src/ptr/mod.rs:LL:COL
   |         inside `_READ` at $DIR/out_of_bounds_read.rs:13:33
   | 
  ::: $DIR/out_of_bounds_read.rs:13:5
   |
LL |     const _READ: u32 = unsafe { ptr::read(PAST_END_PTR) };
   |     ------------------------------------------------------
   |
   = note: `#[deny(const_err)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: any use of this value will cause an error
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
   |
LL |         copy_nonoverlapping(src, tmp.as_mut_ptr(), 1);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |         |
   |         memory access failed: pointer must be in-bounds at offset 8, but is outside bounds of alloc6 which has size 4
   |         inside `std::ptr::read::<u32>` at $SRC_DIR/core/src/ptr/mod.rs:LL:COL
   |         inside `ptr::const_ptr::<impl *const u32>::read` at $SRC_DIR/core/src/ptr/const_ptr.rs:LL:COL
   |         inside `_CONST_READ` at $DIR/out_of_bounds_read.rs:14:39
   | 
  ::: $DIR/out_of_bounds_read.rs:14:5
   |
LL |     const _CONST_READ: u32 = unsafe { PAST_END_PTR.read() };
   |     --------------------------------------------------------
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: any use of this value will cause an error
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
   |
LL |         copy_nonoverlapping(src, tmp.as_mut_ptr(), 1);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |         |
   |         memory access failed: pointer must be in-bounds at offset 8, but is outside bounds of alloc6 which has size 4
   |         inside `std::ptr::read::<u32>` at $SRC_DIR/core/src/ptr/mod.rs:LL:COL
   |         inside `ptr::mut_ptr::<impl *mut u32>::read` at $SRC_DIR/core/src/ptr/mut_ptr.rs:LL:COL
   |         inside `_MUT_READ` at $DIR/out_of_bounds_read.rs:15:37
   | 
  ::: $DIR/out_of_bounds_read.rs:15:5
   |
LL |     const _MUT_READ: u32 = unsafe { (PAST_END_PTR as *mut u32).read() };
   |     --------------------------------------------------------------------
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: aborting due to 3 previous errors

